Upgraded to Java 25, all IDE errors cleared